<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The CyanogenMod Project
     Copyright (C) 2017 The LineageOS Project
     Copyright (C) 2017 Henrique Silva

     Licensed under the GNU GPLv2 license

     The text of the license can be found in the LICENSE file
     or at https://www.gnu.org/licenses/gpl-2.0.txt
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/display_name"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="updates_category"
        android:title="@string/updates_category_title"/>

    <PreferenceCategory
        android:key="extras_category"
        android:title="@string/extras_category_title">

        <PreferenceScreen
            android:key="addons"
            android:title="@string/addons_title"
            android:summary="@string/addons_summary"
            android:icon="@drawable/ic_addons" />

        <PreferenceScreen
            android:key="developer_info"
            android:title="@string/developer_info_title"
            android:icon="@drawable/ic_maintainers_icon" />

        <PreferenceScreen
            android:key="website_info"
            android:title="@string/website_info_title"
            android:summary="@string/website_info_summary"
            android:icon="@drawable/ic_web_icon" />

        <PreferenceScreen
            android:key="donate_info"
            android:title="@string/donate_info_title"
            android:summary="@string/donate_info_summary"
            android:icon="@drawable/ic_donate_icon" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_category"
        android:title="@string/settings_category_title">

     <ListPreference
         android:key="pref_update_check_interval"
         android:persistent="false"
         android:dialogTitle="@string/update_check_title"
         android:title="@string/update_check_title"
         android:entries="@array/update_check_entries"
         android:entryValues="@array/update_check_values"
         android:icon="@drawable/ic_update_interval"/>

     <PreferenceScreen
         android:key="pref_download_folder"
         android:title="@string/download_folder_title"
         android:icon="@drawable/ic_download_icon"
         android:selectable="false" />

     <SwitchPreference
         android:key="pref_check_md5"
         android:title="@string/check_md5_title"
         android:summary="@string/check_md5_summary"
         android:icon="@drawable/ic_check_md5"
         android:defaultValue="true" />

    </PreferenceCategory>
</PreferenceScreen>
